--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="bn">
 <head>
@@ -5,140 +6,169 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crunchyroll Premium BD Shop</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
-    body{font-family:'Inter',sans-serif;margin:0;padding:0;background:#131c2b;color:white;}
-    header{background:#0a0f1c;padding:20px;text-align:center;}
-    header h1{color:#ff9f1c;margin:0;}
-    .container{max-width:600px;margin:20px auto;padding:20px;background:#1c2a3a;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,0.5);}
-    input,select,button{width:100%;padding:10px;margin:10px 0;border-radius:6px;border:none;font-size:16px;}
-    button{background:#ff4081;color:#fff;cursor:pointer;}
-    button:hover{background:#e23370;}
-    .whatsapp{position:fixed;bottom:20px;right:20px;width:50px;height:50px;border-radius:50%;background:#25D366;display:flex;justify-content:center;align-items:center;}
-    .whatsapp img{width:30px;}
-    a{color:#ff9f1c;text-decoration:none;}
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom, #131c2b, #202f45);
+      color: white;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 600px;
+      margin: 30px auto;
+      background: #1c2a3a;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+    h2 {
+      text-align: center;
+      color: #ff6600;
+    }
+    input, select, button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: none;
+    }
+    button {
+      background-color: #ff4081;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #e23370;
+    }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
-  <header><h1>Crunchyroll Premium BD Shop</h1></header>
-  <div class="container" id="signup">
-    <h2>🔐 সাইন আপ</h2>
-    <input type="email" id="signupEmail" placeholder="ইমেইল" required>
-    <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর" required>
-    <input type="password" id="signupPass" placeholder="পাসওয়ার্ড" required>
-    <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
-    <input type="text" id="signupCity" placeholder="শহর" required>
-    <button onclick="handleSignup()">সাইন আপ 🇧🇩</button>
-  </div>
 
-  <div class="container" id="login" style="display:none;">
-    <h2>🔓 সাইন ইন</h2>
-    <input type="email" id="loginEmail" placeholder="ইমেইল" required>
-    <input type="password" id="loginPass" placeholder="পাসওয়ার্ড" required>
-    <button onclick="handleLogin()">সাইন ইন করুন</button>
-  </div>
+<div class="container" id="signup">
+  <h2>🔐 সাইন আপ</h2>
+  <input type="email" id="signupEmail" placeholder="ইমেইল" required>
+  <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর (১১ সংখ্যার)" required>
+  <input type="password" id="signupPassword" placeholder="৬ সংখ্যার পাসওয়ার্ড" required>
+  <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
+  <input type="text" id="signupCity" placeholder="শহর" required>
+  <p>Already have an account? <a href="#" onclick="showLogin()">Sign In</a></p>
+  <button onclick="handleSignup()">সাইন আপ করুন</button>
+</div>
 
-  <div class="container" id="checkout" style="display:none;">
-    <h2>🛒 Add to Cart & Order</h2>
-    <input type="number" id="amount" placeholder="যে এমাউন্ট দিতে চান লিখুন (যেমন:100)">
-    <button onclick="startOrder()">🛒 Add to Cart</button>
-    <form id="orderForm" style="display:none;">
-      <input type="text" name="name" placeholder="Full Name" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="text" name="address" placeholder="Street Address" required>
-      <input type="text" name="mobile" placeholder="Mobile Number" required>
-      <select name="package">
-        <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-        <option value="2 Months Share – 200 TK">2 Months – 200 TK</option>
-        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
-        <option value="6 Months Share – 600 TK">6 Months – 600 TK</option>
-        <option value="8 Months Share – 840 TK">8 Months – 840 TK</option>
-      </select>
-      <input type="text" name="payment_number" placeholder="Payment Number" required>
-      <input type="text" name="trans_id" placeholder="Transaction ID" required>
-      <select name="payment_method" required>
-        <option value="Bkash">Bkash</option>
-        <option value="Nagad">Nagad</option>
-        <option value="Rocket">Rocket</option>
-      </select>
-      <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-    </form>
-  </div>
+<div class="container hidden" id="login">
+  <h2>🔓 সাইন ইন</h2>
+  <input type="email" id="loginEmail" placeholder="ইমেইল" required>
+  <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড" required>
+  <p>Don't have an account? <a href="#" onclick="showSignup()">Sign Up</a></p>
+  <button onclick="handleLogin()">সাইন ইন করুন</button>
+</div>
 
-  <a class="whatsapp" href="https://wa.me/8801305736690" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-  </a>
+<div class="container hidden" id="step1">
+  <h2>🎁 আপনার পছন্দের এমাউন্ট</h2>
+  <input type="number" id="amount" placeholder="৳ যেই এমাউন্ট দিতে চান তা লিখুন">
+  <button onclick="proceedToOrder()">🛒 Add to Cart</button>
+</div>
+
+<div class="container hidden" id="step2">
+  <h2>📦 অর্ডার করুন</h2>
+  <form id="orderForm">
+    <input type="text" name="name" placeholder="Full Name" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <input type="text" name="address" placeholder="Street Address" required>
+    <input type="text" name="mobile" placeholder="Mobile Number" required>
+    <select name="package">
+      <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
+      <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
+    </select>
+    <input type="text" name="payment_number" placeholder="Payment Number" required>
+    <input type="text" name="trans_id" placeholder="Transaction ID" required>
+    <select name="payment_method" required>
+      <option value="Bkash">Bkash</option>
+      <option value="Nagad">Nagad</option>
+    </select>
+    <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
+  </form>
+</div>
 
 <script>
-  // Firebase Config
   const firebaseConfig = {
     apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
     authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-    projectId: "crunchyrollpremiumbd-shop",
+    projectId: "crunchyrollpremiumbd-shop"
   };
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
+  emailjs.init("gGUJF-3OkQQWlWHVF");
 
-  // EmailJS Init
-  emailjs.init("SsUmUorUm-BZG8LBY");
-  const adminTemplate = "template_hp66tqp";
-  const customerTemplate = "template_1z1lhlf";
-  const service = "service_z1714kq";
-
-  function handleSignup(){
-    const e=document.getElementById("signupEmail").value.trim();
-    const p=document.getElementById("signupPhone").value.trim();
-    const pw=document.getElementById("signupPass").value;
-    const cpw=document.getElementById("signupConfirm").value;
-    const city=document.getElementById("signupCity").value.trim();
-    if(pw!==cpw){return alert("Password মিলছে না");}
-    db.collection("users").add({email:e, phone:p, city, timestamp:firebase.firestore.FieldValue.serverTimestamp()})
-      .then(()=>{
-        alert("✅ সাইন আপ সফল! এখন লগইন করুন।");
-        document.getElementById("signup").style.display="none";
-        document.getElementById("login").style.display="block";
-      }).catch(err=>alert("Error: "+err));
+  function showLogin() {
+    document.getElementById("signup").classList.add("hidden");
+    document.getElementById("login").classList.remove("hidden");
   }
 
-  function handleLogin(){
-    const e=document.getElementById("loginEmail").value.trim();
-    db.collection("users").where("email","==",e).get()
-      .then(snap=>{
-        if(snap.empty){return alert("ইউজার পাওয়া যায়নি!");}
-        document.getElementById("login").style.display="none";
-        document.getElementById("checkout").style.display="block";
+  function showSignup() {
+    document.getElementById("login").classList.add("hidden");
+    document.getElementById("signup").classList.remove("hidden");
+  }
+
+  function handleSignup() {
+    const email = document.getElementById("signupEmail").value;
+    const phone = document.getElementById("signupPhone").value;
+    const pass = document.getElementById("signupPassword").value;
+    const confirm = document.getElementById("signupConfirm").value;
+    const city = document.getElementById("signupCity").value;
+    if (!/^[0-9]{6}$/.test(pass)) return alert("পাসওয়ার্ড ৬ সংখ্যার সংখ্যা হতে হবে।");
+    if (!/^[0-9]{11}$/.test(phone)) return alert("মোবাইল নম্বর অবশ্যই ১১ সংখ্যার হতে হবে।");
+    if (pass !== confirm) return alert("Password মিলছে না");
+
+    db.collection("users").where("email", "==", email).get().then(snapshot => {
+      if (!snapshot.empty) return alert("This email already signed up!");
+      db.collection("users").where("phone", "==", phone).get().then(snap2 => {
+        if (!snap2.empty) return alert("This phone number already signed up!");
+        db.collection("users").add({email, phone, city, timestamp: firebase.firestore.FieldValue.serverTimestamp()})
+          .then(() => {
+            alert("সাইন আপ সফল! এখন লগইন করুন।");
+            showLogin();
+          });
       });
+    });
   }
 
-  function startOrder(){
-    const amt=Number(document.getElementById("amount").value);
-    if(!amt || amt < 1) return alert("সঠিক এমাউন্ট দিন!");
-    alert(`✅ আপনি ৳${amt} এর প্যাকেজ বাছাই করেছেন। নিচে পূরণ করুন।`);
-    document.getElementById("amount").disabled=true;
-    document.getElementById("orderForm").style.display="block";
+  function handleLogin() {
+    const email = document.getElementById("loginEmail").value;
+    const pass = document.getElementById("loginPassword").value;
+    db.collection("users").where("email", "==", email).get().then(snapshot => {
+      if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
+      document.getElementById("login").classList.add("hidden");
+      document.getElementById("step1").classList.remove("hidden");
+    });
   }
 
-  document.getElementById("orderForm").addEventListener("submit",function(e){
+  function proceedToOrder() {
+    const amount = document.getElementById("amount").value;
+    if (!amount || amount <= 0) return alert("সঠিক এমাউন্ট লিখুন!");
+    document.getElementById("step1").classList.add("hidden");
+    document.getElementById("step2").classList.remove("hidden");
+  }
+
+  document.getElementById("orderForm").addEventListener("submit", function(e) {
     e.preventDefault();
-    const data = Object.fromEntries(new FormData(this).entries());
-    data.amount = Number(document.getElementById("amount").value);
-    data.timestamp = firebase.firestore.FieldValue.serverTimestamp();
-
-    db.collection("orders").add(data)
-      .then(doc=>{
-        alert("✅ অর্ডার সফলভাবে সাবমিট হয়েছে!");
-        // Send customer pending email
-        emailjs.send(service, customerTemplate, data);
-        // Send admin notification
-        emailjs.send(service, adminTemplate, data);
-        this.reset();
-        document.getElementById("amount").value="";
-        document.getElementById("orderForm").style.display="none";
-        document.getElementById("amount").disabled=false;
-      }).catch(err=>alert("❌ অর্ডার ব্যর্থ হয়েছে: "+err));
+    const formData = new FormData(this);
+    const order = {};
+    formData.forEach((v, k) => order[k] = v);
+    order.timestamp = firebase.firestore.FieldValue.serverTimestamp();
+    db.collection("orders").add(order).then(() => {
+      emailjs.send("service_8i7tcn9", "template_ojij3vd", order);
+      emailjs.send("service_8i7tcn9", "template_g0c9z8v", order);
+      alert("✅ অর্ডার কনফার্ম হয়েছে!");
+      document.getElementById("orderForm").reset();
+    }).catch(err => alert("❌ অর্ডার ব্যর্থ হয়েছে"));
   });
 </script>
+
 </body>
 </html>
