--- a/Index.html
+++ b/Index.html
@@ -1,17 +1,14 @@
-
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crunchyroll Premium BD Shop</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(to bottom, #131c2b, #202f45);
       color: white;
       margin: 0;
@@ -23,11 +20,11 @@
       background: #1c2a3a;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
     }
     h2 {
       text-align: center;
-      color: #ff6600;
+      color: #ff9f1c;
     }
     input, select, button {
       width: 100%;
@@ -35,6 +32,7 @@
       margin: 10px 0;
       border-radius: 8px;
       border: none;
+      font-size: 16px;
     }
     button {
       background-color: #ff4081;
@@ -45,130 +43,129 @@
       background-color: #e23370;
     }
     .hidden { display: none; }
+    .link { text-align: center; color: #aaa; cursor: pointer; margin-top: 10px; text-decoration: underline; }
   </style>
 </head>
 <body>
+  <div class="container" id="signup">
+    <h2>🔐 সাইন আপ</h2>
+    <input type="email" id="signupEmail" placeholder="ইমেইল" required>
+    <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর" required>
+    <input type="password" id="signupPassword" placeholder="পাসওয়ার্ড" required>
+    <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
+    <input type="text" id="signupCity" placeholder="শহর" required>
+    <button onclick="handleSignup()">সাইন আপ করুন</button>
+    <div class="link" onclick="showLogin()">সাইন ইন করতে চান?</div>
+  </div>  <div class="container hidden" id="login">
+    <h2>🔓 সাইন ইন</h2>
+    <input type="email" id="loginEmail" placeholder="ইমেইল" required>
+    <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড" required>
+    <button onclick="handleLogin()">সাইন ইন করুন</button>
+    <div class="link" onclick="showSignup()">নতুন অ্যাকাউন্ট তৈরি করুন</div>
+  </div>  <div class="container hidden" id="packagePage">
+    <h2>🎁 প্যাকেজ সিলেক্ট করুন</h2>
+    <input type="number" id="amount" placeholder="যে এমাউন্টটি দিতে চান তা লিখুন">
+    <button onclick="gotoPayment()">🛒 Add to Cart</button>
+  </div>  <div class="container hidden" id="paymentPage">
+    <h2>✅ পেমেন্ট ফর্ম</h2>
+    <form id="orderForm">
+      <input type="text" name="name" placeholder="Full Name" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="text" name="address" placeholder="Street Address" required>
+      <input type="text" name="mobile" placeholder="Mobile Number" required>
+      <select name="package" required>
+        <option value="1 Month – 100 TK">1 Month – 100 TK</option>
+        <option value="3 Months – 300 TK">3 Months – 300 TK</option>
+      </select>
+      <input type="text" name="payment_number" placeholder="Payment Number" required>
+      <input type="text" name="trans_id" placeholder="Transaction ID" required>
+      <select name="payment_method" required>
+        <option value="Bkash">Bkash</option>
+        <option value="Nagad">Nagad</option>
+      </select>
+      <button type="submit">অর্ডার কনফার্ম করুন</button>
+    </form>
+  </div>  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
+      authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
+      projectId: "crunchyrollpremiumbd-shop"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-<div class="container" id="signup">
-  <h2>🔐 সাইন আপ</h2>
-  <input type="email" id="signupEmail" placeholder="ইমেইল" required>
-  <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর (১১ সংখ্যার)" required>
-  <input type="password" id="signupPassword" placeholder="৬ সংখ্যার পাসওয়ার্ড" required>
-  <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
-  <input type="text" id="signupCity" placeholder="শহর" required>
-  <p>Already have an account? <a href="#" onclick="showLogin()">Sign In</a></p>
-  <button onclick="handleSignup()">সাইন আপ করুন</button>
-</div>
+    emailjs.init("uXYUhDmq3c7f9us7P");
 
-<div class="container hidden" id="login">
-  <h2>🔓 সাইন ইন</h2>
-  <input type="email" id="loginEmail" placeholder="ইমেইল" required>
-  <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড" required>
-  <p>Don't have an account? <a href="#" onclick="showSignup()">Sign Up</a></p>
-  <button onclick="handleLogin()">সাইন ইন করুন</button>
-</div>
+    function showLogin() {
+      document.getElementById("signup").classList.add("hidden");
+      document.getElementById("login").classList.remove("hidden");
+    }
 
-<div class="container hidden" id="step1">
-  <h2>🎁 আপনার পছন্দের এমাউন্ট</h2>
-  <input type="number" id="amount" placeholder="৳ যেই এমাউন্ট দিতে চান তা লিখুন">
-  <button onclick="proceedToOrder()">🛒 Add to Cart</button>
-</div>
+    function showSignup() {
+      document.getElementById("login").classList.add("hidden");
+      document.getElementById("signup").classList.remove("hidden");
+    }
 
-<div class="container hidden" id="step2">
-  <h2>📦 অর্ডার করুন</h2>
-  <form id="orderForm">
-    <input type="text" name="name" placeholder="Full Name" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="text" name="address" placeholder="Street Address" required>
-    <input type="text" name="mobile" placeholder="Mobile Number" required>
-    <select name="package">
-      <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-      <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
-    </select>
-    <input type="text" name="payment_number" placeholder="Payment Number" required>
-    <input type="text" name="trans_id" placeholder="Transaction ID" required>
-    <select name="payment_method" required>
-      <option value="Bkash">Bkash</option>
-      <option value="Nagad">Nagad</option>
-    </select>
-    <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-  </form>
-</div>
+    function handleSignup() {
+      const email = document.getElementById("signupEmail").value;
+      const phone = document.getElementById("signupPhone").value;
+      const pass = document.getElementById("signupPassword").value;
+      const confirm = document.getElementById("signupConfirm").value;
+      const city = document.getElementById("signupCity").value;
 
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-    authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-    projectId: "crunchyrollpremiumbd-shop"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  emailjs.init("gGUJF-3OkQQWlWHVF");
+      if (!/^[0-9]{6}$/.test(pass)) return alert("Password অবশ্যই ৬ সংখ্যার হতে হবে");
+      if (pass !== confirm) return alert("Password মিলছে না");
+      if (!/^\d{11}$/.test(phone)) return alert("মোবাইল নাম্বার ১১ সংখ্যার হতে হবে");
+      if (!city) return alert("দয়া করে আপনার সিটি সিলেক্ট করুন");
 
-  function showLogin() {
-    document.getElementById("signup").classList.add("hidden");
-    document.getElementById("login").classList.remove("hidden");
-  }
+      db.collection("users").where("email", "==", email).get().then(snapshot => {
+        if (!snapshot.empty) return alert("This email is already registered");
+        db.collection("users").where("phone", "==", phone).get().then(pSnap => {
+          if (!pSnap.empty) return alert("This phone number is already registered");
 
-  function showSignup() {
-    document.getElementById("login").classList.add("hidden");
-    document.getElementById("signup").classList.remove("hidden");
-  }
+          db.collection("users").add({ email, phone, city, timestamp: firebase.firestore.FieldValue.serverTimestamp() })
+            .then(() => {
+              alert("সাইন আপ সফল! এখন লগইন করুন।");
+              showLogin();
+            });
+        });
+      });
+    }
 
-  function handleSignup() {
-    const email = document.getElementById("signupEmail").value;
-    const phone = document.getElementById("signupPhone").value;
-    const pass = document.getElementById("signupPassword").value;
-    const confirm = document.getElementById("signupConfirm").value;
-    const city = document.getElementById("signupCity").value;
-    if (!/^[0-9]{6}$/.test(pass)) return alert("পাসওয়ার্ড ৬ সংখ্যার সংখ্যা হতে হবে।");
-    if (!/^[0-9]{11}$/.test(phone)) return alert("মোবাইল নম্বর অবশ্যই ১১ সংখ্যার হতে হবে।");
-    if (pass !== confirm) return alert("Password মিলছে না");
+    function handleLogin() {
+      const email = document.getElementById("loginEmail").value;
+      const pass = document.getElementById("loginPassword").value;
 
-    db.collection("users").where("email", "==", email).get().then(snapshot => {
-      if (!snapshot.empty) return alert("This email already signed up!");
-      db.collection("users").where("phone", "==", phone).get().then(snap2 => {
-        if (!snap2.empty) return alert("This phone number already signed up!");
-        db.collection("users").add({email, phone, city, timestamp: firebase.firestore.FieldValue.serverTimestamp()})
-          .then(() => {
-            alert("সাইন আপ সফল! এখন লগইন করুন।");
-            showLogin();
-          });
+      db.collection("users").where("email", "==", email).get().then(snapshot => {
+        if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
+        document.getElementById("login").classList.add("hidden");
+        document.getElementById("packagePage").classList.remove("hidden");
+      });
+    }
+
+    function gotoPayment() {
+      const amount = document.getElementById("amount").value;
+      if (!amount || amount <= 0) return alert("একটি বৈধ এমাউন্ট লিখুন");
+      document.getElementById("packagePage").classList.add("hidden");
+      document.getElementById("paymentPage").classList.remove("hidden");
+    }
+
+    document.getElementById("orderForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+      const order = {};
+      formData.forEach((v, k) => order[k] = v);
+      order.timestamp = firebase.firestore.FieldValue.serverTimestamp();
+
+      db.collection("orders").add(order).then(() => {
+        alert("✅ অর্ডার কনফার্ম হয়েছে!");
+        document.getElementById("orderForm").reset();
+
+        emailjs.send("service_oilofms", "template_0v4tz8h", order, "uXYUhDmq3c7f9us7P");
+        emailjs.send("service_oilofms", "template_customer_pending", order, "uXYUhDmq3c7f9us7P");
+      }).catch(() => {
+        alert("❌ অর্ডার ব্যর্থ হয়েছে");
       });
     });
-  }
-
-  function handleLogin() {
-    const email = document.getElementById("loginEmail").value;
-    const pass = document.getElementById("loginPassword").value;
-    db.collection("users").where("email", "==", email).get().then(snapshot => {
-      if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
-      document.getElementById("login").classList.add("hidden");
-      document.getElementById("step1").classList.remove("hidden");
-    });
-  }
-
-  function proceedToOrder() {
-    const amount = document.getElementById("amount").value;
-    if (!amount || amount <= 0) return alert("সঠিক এমাউন্ট লিখুন!");
-    document.getElementById("step1").classList.add("hidden");
-    document.getElementById("step2").classList.remove("hidden");
-  }
-
-  document.getElementById("orderForm").addEventListener("submit", function(e) {
-    e.preventDefault();
-    const formData = new FormData(this);
-    const order = {};
-    formData.forEach((v, k) => order[k] = v);
-    order.timestamp = firebase.firestore.FieldValue.serverTimestamp();
-    db.collection("orders").add(order).then(() => {
-      emailjs.send("service_8i7tcn9", "template_ojij3vd", order);
-      emailjs.send("service_8i7tcn9", "template_g0c9z8v", order);
-      alert("✅ অর্ডার কনফার্ম হয়েছে!");
-      document.getElementById("orderForm").reset();
-    }).catch(err => alert("❌ অর্ডার ব্যর্থ হয়েছে"));
-  });
-</script>
-
-</body>
+  </script></body>
 </html>
