--- a/Index.html
+++ b/Index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html><html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Crunchyroll Premium BD Shop</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
       background: linear-gradient(to bottom, #131c2b, #202f45);
       color: white;
       margin: 0;
       padding: 0;
     }
+    header {
+      background-color: #0a0f1c;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+    }
+    header h1 {
+      margin: 0;
+      color: #ff9f1c;
+    }
     .container {
       max-width: 600px;
-      margin: 30px auto;
+      margin: 20px auto;
       background: #1c2a3a;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-    }
-    h2 {
-      text-align: center;
-      color: #ff9f1c;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
     input, select, button {
       width: 100%;
@@ -32,7 +39,6 @@
       margin: 10px 0;
       border-radius: 8px;
       border: none;
-      font-size: 16px;
     }
     button {
       background-color: #ff4081;
@@ -43,47 +49,48 @@
       background-color: #e23370;
     }
     .hidden { display: none; }
-    .link { text-align: center; color: #aaa; cursor: pointer; margin-top: 10px; text-decoration: underline; }
   </style>
 </head>
 <body>
+  <header>
+    <h1>🎌 Crunchyroll Premium BD Shop 🎌</h1>
+  </header>
   <div class="container" id="signup">
-    <h2>🔐 সাইন আপ</h2>
-    <input type="email" id="signupEmail" placeholder="ইমেইল" required>
-    <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর" required>
-    <input type="password" id="signupPassword" placeholder="পাসওয়ার্ড" required>
-    <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
-    <input type="text" id="signupCity" placeholder="শহর" required>
-    <button onclick="handleSignup()">সাইন আপ করুন</button>
-    <div class="link" onclick="showLogin()">সাইন ইন করতে চান?</div>
+    <h2>🔐 একাউন্ট তৈরি করুন</h2>
+    <input type="email" id="signupEmail" placeholder="📧 ইমেইল" required />
+    <input type="text" id="signupPhone" placeholder="📱 মোবাইল নম্বর (11 digit)" required />
+    <input type="password" id="signupPassword" placeholder="🔑 ৬ সংখ্যার পাসওয়ার্ড" required />
+    <input type="password" id="signupConfirm" placeholder="✅ পাসওয়ার্ড কনফার্ম" required />
+    <input type="text" id="signupCity" placeholder="🏙️ শহর" required />
+    <button onclick="handleSignup()">🎯 সাইন আপ</button>
+    <p>👉 আগে একাউন্ট আছে? <a href="#" onclick="showLogin()">লগইন করুন</a></p>
   </div>  <div class="container hidden" id="login">
-    <h2>🔓 সাইন ইন</h2>
-    <input type="email" id="loginEmail" placeholder="ইমেইল" required>
-    <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড" required>
-    <button onclick="handleLogin()">সাইন ইন করুন</button>
-    <div class="link" onclick="showSignup()">নতুন অ্যাকাউন্ট তৈরি করুন</div>
-  </div>  <div class="container hidden" id="packagePage">
-    <h2>🎁 প্যাকেজ সিলেক্ট করুন</h2>
-    <input type="number" id="amount" placeholder="যে এমাউন্টটি দিতে চান তা লিখুন">
-    <button onclick="gotoPayment()">🛒 Add to Cart</button>
-  </div>  <div class="container hidden" id="paymentPage">
-    <h2>✅ পেমেন্ট ফর্ম</h2>
+    <h2>🔓 লগইন করুন</h2>
+    <input type="email" id="loginEmail" placeholder="📧 ইমেইল" required />
+    <input type="password" id="loginPassword" placeholder="🔑 পাসওয়ার্ড" required />
+    <button onclick="handleLogin()">🚀 লগইন</button>
+  </div>  <div class="container hidden" id="mainWebsite">
+    <h2>🛒 আপনার প্যাকেজ সিলেক্ট করুন</h2>
+    <input type="number" id="amount" placeholder="💳 এমাউন্ট লিখুন" />
+    <button onclick="goToOrderPage()">➡️ Add to Cart</button>
+  </div>  <div class="container hidden" id="orderPage">
+    <h2>📦 অর্ডার করুন</h2>
     <form id="orderForm">
-      <input type="text" name="name" placeholder="Full Name" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="text" name="address" placeholder="Street Address" required>
-      <input type="text" name="mobile" placeholder="Mobile Number" required>
-      <select name="package" required>
-        <option value="1 Month – 100 TK">1 Month – 100 TK</option>
-        <option value="3 Months – 300 TK">3 Months – 300 TK</option>
+      <input type="text" name="name" placeholder="👤 Full Name" required />
+      <input type="email" name="email" placeholder="📧 Email" required />
+      <input type="text" name="address" placeholder="🏠 Street Address" required />
+      <input type="text" name="mobile" placeholder="📱 Mobile Number" required />
+      <select name="package">
+        <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
+        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
       </select>
-      <input type="text" name="payment_number" placeholder="Payment Number" required>
-      <input type="text" name="trans_id" placeholder="Transaction ID" required>
+      <input type="text" name="payment_number" placeholder="📲 Payment Number" required />
+      <input type="text" name="trans_id" placeholder="🧾 Transaction ID" required />
       <select name="payment_method" required>
         <option value="Bkash">Bkash</option>
         <option value="Nagad">Nagad</option>
       </select>
-      <button type="submit">অর্ডার কনফার্ম করুন</button>
+      <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
     </form>
   </div>  <script>
     const firebaseConfig = {
@@ -93,17 +100,11 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-
-    emailjs.init("uXYUhDmq3c7f9us7P");
+    emailjs.init("bpa8A46bPvSYhlAht");
 
     function showLogin() {
       document.getElementById("signup").classList.add("hidden");
       document.getElementById("login").classList.remove("hidden");
-    }
-
-    function showSignup() {
-      document.getElementById("login").classList.add("hidden");
-      document.getElementById("signup").classList.remove("hidden");
     }
 
     function handleSignup() {
@@ -113,21 +114,20 @@
       const confirm = document.getElementById("signupConfirm").value;
       const city = document.getElementById("signupCity").value;
 
-      if (!/^[0-9]{6}$/.test(pass)) return alert("Password অবশ্যই ৬ সংখ্যার হতে হবে");
-      if (pass !== confirm) return alert("Password মিলছে না");
-      if (!/^\d{11}$/.test(phone)) return alert("মোবাইল নাম্বার ১১ সংখ্যার হতে হবে");
-      if (!city) return alert("দয়া করে আপনার সিটি সিলেক্ট করুন");
+      if (phone.length !== 11) return alert("📱 মোবাইল নাম্বারটি ভুল!");
+      if (!/^[0-9]{6}$/.test(pass)) return alert("🔑 ৬ সংখ্যার নাম্বার পাসওয়ার্ড দিন");
+      if (!city) return alert("🏙️ দয়া করে শহরের নাম লিখুন");
+      if (pass !== confirm) return alert("🔁 পাসওয়ার্ড মিলছে না");
 
-      db.collection("users").where("email", "==", email).get().then(snapshot => {
-        if (!snapshot.empty) return alert("This email is already registered");
-        db.collection("users").where("phone", "==", phone).get().then(pSnap => {
-          if (!pSnap.empty) return alert("This phone number is already registered");
+      db.collection("users").where("email", "==", email).get().then(snap => {
+        if (!snap.empty) return alert("❌ ইমেইল ইতোমধ্যেই ব্যবহৃত হয়েছে");
+        db.collection("users").where("phone", "==", phone).get().then(ph => {
+          if (!ph.empty) return alert("❌ মোবাইল নাম্বার ইতোমধ্যেই ব্যবহৃত হয়েছে");
 
-          db.collection("users").add({ email, phone, city, timestamp: firebase.firestore.FieldValue.serverTimestamp() })
-            .then(() => {
-              alert("সাইন আপ সফল! এখন লগইন করুন।");
-              showLogin();
-            });
+          db.collection("users").add({ email, phone, city, timestamp: firebase.firestore.FieldValue.serverTimestamp() }).then(() => {
+            alert("✅ সাইন আপ সফল! এখন লগইন করুন।");
+            showLogin();
+          });
         });
       });
     }
@@ -136,18 +136,20 @@
       const email = document.getElementById("loginEmail").value;
       const pass = document.getElementById("loginPassword").value;
 
+      if (!/^[0-9]{6}$/.test(pass)) return alert("🔑 পাসওয়ার্ড ভুল (৬ সংখ্যার নাম্বার হতে হবে)");
+
       db.collection("users").where("email", "==", email).get().then(snapshot => {
-        if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
+        if (snapshot.empty) return alert("😢 ইউজার পাওয়া যায়নি!");
         document.getElementById("login").classList.add("hidden");
-        document.getElementById("packagePage").classList.remove("hidden");
+        document.getElementById("mainWebsite").classList.remove("hidden");
       });
     }
 
-    function gotoPayment() {
+    function goToOrderPage() {
       const amount = document.getElementById("amount").value;
-      if (!amount || amount <= 0) return alert("একটি বৈধ এমাউন্ট লিখুন");
-      document.getElementById("packagePage").classList.add("hidden");
-      document.getElementById("paymentPage").classList.remove("hidden");
+      if (!amount || amount <= 0) return alert("❌ সঠিক এমাউন্ট লিখুন");
+      document.getElementById("mainWebsite").classList.add("hidden");
+      document.getElementById("orderPage").classList.remove("hidden");
     }
 
     document.getElementById("orderForm").addEventListener("submit", function(e) {
@@ -159,13 +161,10 @@
 
       db.collection("orders").add(order).then(() => {
         alert("✅ অর্ডার কনফার্ম হয়েছে!");
+        emailjs.send("service_92d3nmb", "template_1e97v39", order);
+        emailjs.send("service_92d3nmb", "template_n9clz3s", order);
         document.getElementById("orderForm").reset();
-
-        emailjs.send("service_oilofms", "template_0v4tz8h", order, "uXYUhDmq3c7f9us7P");
-        emailjs.send("service_oilofms", "template_customer_pending", order, "uXYUhDmq3c7f9us7P");
-      }).catch(() => {
-        alert("❌ অর্ডার ব্যর্থ হয়েছে");
-      });
+      }).catch(() => alert("❌ অর্ডার ব্যর্থ হয়েছে"));
     });
   </script></body>
 </html>
